render page manage recruitments

--- a/src/server_employer/Source/views/contents/manage_candidates_cvs.hbs
+++ b/src/server_employer/Source/views/contents/manage_candidates_cvs.hbs
@@ -107,3 +107,8 @@
         </nav>
     </div>
 </div>
+
+<script>
+    $(".menu_item").removeClass("is_selected")
+    $("#menu_manage_record_home_recruit").addClass("is_selected")
+</script>
