--- a/src/server_candidate/Source/views/detail_job_candidate.html
+++ b/src/server_candidate/Source/views/detail_job_candidate.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">   
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -30,11 +30,13 @@
 
 <body>
     <div class="rectangle_home">
-        <div class="modal fade" id="modal_apply_company" tabindex="-1" aria-labelledby="modal_updateLabel" aria-hidden="true">
+        <div class="modal fade" id="modal_apply_company" tabindex="-1" aria-labelledby="modal_updateLabel"
+            aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <span class="modal-title" id="exampleModalLabel">Ứng tuyển:&nbsp;<span id="name_job_modal_apply_company">Front-End Web Developer</span> </span>
+                        <span class="modal-title" id="exampleModalLabel">Ứng tuyển:&nbsp;<span
+                                id="name_job_modal_apply_company">Front-End Web Developer</span> </span>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <form action="#" method="post" enctype="multipart/form-data">
@@ -42,21 +44,23 @@
                             <div id="text_CV_me">CV của bạn:</div>
                             <img src="./style/image/ic_upload.svg" id="ic_upload_CV" alt="ic_upload_CV">
 
-                            <input type="file" name="file" id="file" class="inputfile" />
-                            <label for="file" id="label_file">Tải CV</label>    
-                            <div id="text_fullname_CV">Họ và tên:</div>    
-                            <input type="text" name="fullname_cv" id="fullname_cv" required placeholder="Nhập đầy đủ họ tên">
-                            <div id="text_email_CV">Email:</div>    
+                            <input type="file" name="file" id="file" class="inputfile" required/>
+                            <label for="file" id="label_file">Tải CV</label>
+                            <div id="text_fullname_CV">Họ và tên:</div>
+                            <input type="text" name="fullname_cv" id="fullname_cv" required
+                                placeholder="Nhập đầy đủ họ tên">
+                            <div id="text_email_CV">Email:</div>
                             <input type="email" name="email_cv" id="email_cv" required placeholder="Nhập email">
-                            <div id="text_phone_CV">Số điện thoại</div>    
+                            <div id="text_phone_CV">Số điện thoại</div>
                             <input type="text" name="phone_cv" id="phone_cv" required placeholder="Nhập số điện thoại">
-                            <div id="text_introduce_CV">Giới thiệu:</div>   
-                            <textarea name="introduce_cv" class="form-control" id="introduce_cv" required placeholder="Một vài lời giới thiệu với nhà tuyển dụng"></textarea> 
+                            <div id="text_introduce_CV">Giới thiệu:</div>
+                            <textarea name="introduce_cv" class="form-control" id="introduce_cv" required
+                                placeholder="Một vài lời giới thiệu với nhà tuyển dụng"></textarea>
                             <button type="button" id="close_cv" data-bs-dismiss="modal">Đóng</button>
                             <button type="submit" id="submit_cv">Nộp</button>
                         </div>
-                       
-                       
+
+
                     </form>
                 </div>
             </div>
@@ -74,15 +78,17 @@
                 </button>
                 <div class="dropdown-menu" id="dropdown_menu_candidate" aria-labelledby="menu_account_candidate">
                     <a class="dropdown-item" id="setting_account_candidate" href="#">Cài đặt tài khoản
-                        <img src="./style/image/ic_setting_account.svg" id="ic_setting_account_candidate" alt="ic_setting_account_candidate">
+                        <img src="./style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
+                            alt="ic_setting_account_candidate">
                     </a>
                     <a class="dropdown-item" id="application_management_candidate" href="#">Quản lý hồ sơ ứng tuyển
-                        <img src="./style/image/ic_managed_application.svg" id="ic_application_management_candidate" alt="ic_application_management_candidate">
+                        <img src="./style/image/ic_managed_application.svg" id="ic_application_management_candidate"
+                            alt="ic_application_management_candidate">
                     </a>
                     <a class="dropdown-item" id="logout_candidate" href="#">Đăng xuất
                         <img src="./style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
                     </a>
-               
+
                 </div>
             </div>
         </nav>
@@ -94,7 +100,8 @@
                     <option value="" class="op_select_province">Hồ Chí Minh</option>
                     <option value="" class="op_select_province">Hà Nội</option>
                 </select>
-                <img src="./style/image/ic_select_province.svg" alt="ic_select_province_candidate" id="ic_select_province_candidate">
+                <img src="./style/image/ic_select_province.svg" alt="ic_select_province_candidate"
+                    id="ic_select_province_candidate">
                 <input id="address_work_candidate" name="address_work_candidate" type="hidden" value="">
                 <select name="select_method_work" id="select_method_work_candidate" required="">
                     <option disabled selected value> Hình thức làm việc </option>
@@ -133,7 +140,8 @@
                 <div class="name_company_detail_job">VNG Games</div>
                 <img src="./style/image/ic_time.svg" alt="ic_time" class="ic_time_detail_job">
                 <div class="deadline_submit_record_detail_job">Hạn nộp hồ sơ: 12-12-2022 </div>
-                <button type="button" class="btn_apply_to_company_detail_job" data-bs-toggle="modal" data-bs-target="#modal_apply_company">Ứng tuyển</button>
+                <button type="button" class="btn_apply_to_company_detail_job" data-bs-toggle="modal"
+                    data-bs-target="#modal_apply_company">Ứng tuyển</button>
                 <button type="button" class="btn_save_job_detail_job">Lưu tin</button>
             </div>
             <div id="detail_recruit_detail_job">
@@ -168,20 +176,23 @@
                     <img src="./style/image/ic_experience.svg" alt="ic_experience" id="ic_experience_detail_job">
 
                     <div id="text_adress_work_detail_job">Địa điểm làm việc</div>
-                    <div id="value_adress_work_detail_job">KTX khu A, phường Linh Trung,Thành phố Thủ Đức, Thành phố Hồ Chí Minh</div>
+                    <div id="value_adress_work_detail_job">KTX khu A, phường Linh Trung,Thành phố Thủ Đức, Thành phố Hồ
+                        Chí Minh</div>
                 </div>
                 <div id="rectangle_share_recruit_detail_job">
                     <div id="text_share_recuit_detail_job">Chia sẻ tin tuyển dụng</div>
                     <div id="text_copy_link_detail_job">Sao chép đường dẫn</div>
-                    <input type="text" value="file:///D:/Nhap%20mon%20CNPM/DO%20AN/detail_job_candidate.html" disabled name="link_detail_job" id="link_detail_job">
-                    
+                    <input type="text" value="file:///D:/Nhap%20mon%20CNPM/DO%20AN/detail_job_candidate.html" disabled
+                        name="link_detail_job" id="link_detail_job">
+
                     <div id="circle_copy_link_detail_job">
                         <img src="./style/image/ic_copy.svg" alt="ic_copy" id="ic_copy_link_detail_job">
                     </div>
                 </div>
                 <div id="rectangle_report_recruit_detail_job">
                     <div id="text_report_recuit_detail_job">Báo cáo tin tuyển dụng</div>
-                    <div id="text_describe_report_detail_job">Nếu bạn thấy rằng tin tuyển dụng này không đúng hoặc có một trong các dấu hiệu xấu, hãy phản ánh với chúng tôi.
+                    <div id="text_describe_report_detail_job">Nếu bạn thấy rằng tin tuyển dụng này không đúng hoặc có
+                        một trong các dấu hiệu xấu, hãy phản ánh với chúng tôi.
                     </div>
                     <button type="button" id="btn_report_detail_job">Báo cáo</button>
 
@@ -242,14 +253,15 @@ accounting, payroll, healthcare, and apartment management business.
                 </div>
                 <div id="rectangle_address_compayny">
                     <div class="circle_icon" id="circle_address_company_detail_job"></div>
-                    <img src="./style/image/ic_select_province.svg" alt="ic_province" id="ic_province_company_detail_job">
+                    <img src="./style/image/ic_select_province.svg" alt="ic_province"
+                        id="ic_province_company_detail_job">
                     <div id="text_province_company_detail_job">Địa điểm</div>
                     <div id="value_province_company_detail_job">Linh Trung, Thủ Đức, Hồ Chí Minh</div>
                 </div>
 
             </div>
         </div>
-       
+
         <div class="footer">
             <img id="logo_web_footer" src="./style/image/logo_web.svg" alt="logoweb">
             <p id="text_info_footer">Chúng tôi là JORE hệ thống tìm kiếm việc làm uy tính tại Việt Nam</p>
@@ -257,28 +269,27 @@ accounting, payroll, healthcare, and apartment management business.
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
-    integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
-    crossorigin="anonymous"></script>
+        integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+        crossorigin="anonymous"></script>
 
 </body>
 <script>
-    var inputs = document.querySelectorAll( '.inputfile' );
-Array.prototype.forEach.call( inputs, function( input )
-{
-	var label	 = input.nextElementSibling,
-		labelVal = document.getElementById("label_file").innerHTML;
+    var inputs = document.querySelectorAll('.inputfile');
+    Array.prototype.forEach.call(inputs, function (input) {
+        var label = input.nextElementSibling,
+            labelVal = document.getElementById("label_file").innerHTML;
 
-	input.addEventListener( 'change', function( e )
-	{
-		var fileName = '';
-		fileName = e.target.value.split( '\\' ).pop()
+        input.addEventListener('change', function (e) {
+            var fileName = '';
+            fileName = e.target.value.split('\\').pop()
 
-		if( fileName )
-        document.getElementById("label_file").innerHTML = fileName;
-		else
-        document.getElementById("label_file").innerHTML =labelVal;
-	});
-});
+            if (fileName)
+                document.getElementById("label_file").innerHTML = fileName;
+            else
+                document.getElementById("label_file").innerHTML = labelVal;
+        });
+    });
 
 </script>
+
 </html>
