--- a/src/server_employer/Source/views/contents/edit_recruitment.hbs
+++ b/src/server_employer/Source/views/contents/edit_recruitment.hbs
@@ -63,3 +63,8 @@
         <a id="cancle_edit_news" href="#">Hủy bỏ</a>
     </div>
 </div>
+
+<script>
+    $(".menu_item").removeClass("is_selected")
+    $("#menu_manage_recruit_home_recruit").addClass("is_selected")
+</script>
